Fix paragraph spacing

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -140,6 +140,10 @@ body {
 
             p {
               margin-top: 0;
+
+              &:last-child {
+                margin-bottom: 0;
+              }
             }
           }
         }
